# game

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.xml  improvements.cpp  index.html  index.js  index.wasm
.github/workflows/: main.yml
assets/config/: config.xml
components/: behavior.cpp  behavior.h  container.cpp  container.h  entity_spawn.cpp  entity_spawn.h  input.cpp  input.h  life.cpp  life.h  life_time.cpp  life_time.h  mouse_control.cpp  mouse_control.h  movement.cpp  movement.h  physical_interaction.cpp  physical_interaction.h  position.cpp  position.h  render.cpp  render.h  shooting.cpp  shooting.h  velocity.cpp  velocity.h
global/: global.cpp  global.h
lib/: init_components.h  random-gen.h  sounds.h  textures.h
src/: Main.java  main.cpp  random-gen.cpp  random-gen.h
src/ecs/: background_music.cpp  background_music.h  behavior.cpp  behavior.h  container.cpp  container.h  entity_from_xml.cpp  entity_from_xml.h  entity_spawn.cpp  entity_spawn.h  life.cpp  life.h  load_prefabs.cpp  load_prefabs.h  mouse_control.cpp  movement.cpp  movement.h  physical_interaction.h  render.cpp  render.h  shooting.cpp  shooting.h
src/ecs/behavior/: behavior.cpp  behavior.h  life.cpp  life.h
src/ecs/entity/: load_prefabs.cpp  load_prefabs.h
src/ecs/gameplay/: mouse_control.cpp  mouse_control.h  movement.cpp  movement.h  shooting.cpp  shooting.h
src/ecs/inventory/: container.cpp  container.h
src/ecs/music/: background_music.cpp  background_music.h
src/ecs/physics/: physical_interaction.h
src/ecs/render/: render.cpp  render.h
src/ecs/utils/: init_components.h
src/game/: Cell.java  Game.java  Move.java  Result.java  StepValueScanner.java  Tournament.java
src/game/board/: Board.java  CircleBoard.java  MNKBoard.java  Position.java
src/game/player/: HumanPlayer.java  Player.java  RandomPlayer.java  SequentialPlayer.java
src/global/: global.cpp  global.h
src/globals/: globals.cpp  globals.h
src/lib/: distance.h  random-gen.h  random_gen.cpp  sounds.cpp  sounds.h  string_modify.cpp
src/resources/: entity_from_xml.cpp  entity_from_xml.h  level.cpp  level.h  sounds.cpp  sounds.h  textures.cpp  textures.h
src/utils/: distance.h  random_gen.h  string_modify.cpp  string_modify.h
